# zxdbfs

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  zxdbfs_byletter.c  zxdbfs_byletter.h  zxdbfs_fscache.c  zxdbfs_fscache.h  zxdbfs_fscacheentry.c  zxdbfs_fscacheentry.h  zxdbfs_gameid.c  zxdbfs_gameid.h  zxdbfs_http.c  zxdbfs_http.h  zxdbfs_json.c  zxdbfs_json.h  zxdbfs_paths.c  zxdbfs_paths.h  zxdbfs_search.c  zxdbfs_search.h  zxdbfs_status.c  zxdbfs_status.h
scripts/: jsontoc.py
src/: CMakeLists.txt  zxdbfs.c  zxdbfsd.c
testdata/: by-letter-X.h  by-letter-X.json  search-Hewson.h  search-Hewson.json  search-Uridium.h  search-Uridium.json  search-Zynaps.h  search-Zynaps.json  status-good.h  status-good.json  status-mixed.h  status-mixed.json  zxdb-games-0005795.h  zxdb-games-0005795.json  zxdb-games-0030005.json
tests/: CMakeLists.txt  zxdbfs_byletter_tests.cpp  zxdbfs_fscache_tests.cpp  zxdbfs_fscacheentry_tests.cpp  zxdbfs_gameid_tests.cpp  zxdbfs_http_tests.cpp  zxdbfs_paths_tests.cpp  zxdbfs_search_tests.cpp  zxdbfs_status_tests.cpp  zxdbfs_tests_utils.cpp  zxdbfs_tests_utils.h
